Fix sidebar section icon shrinking and sidebar section text not correctly overflowing if the text doesn't have any spaces

--- a/loritta-bot-discord/src/main/sass-dashboard-v2/style.scss
+++ b/loritta-bot-discord/src/main/sass-dashboard-v2/style.scss
@@ -544,12 +544,14 @@ nav#left-sidebar {
                     -webkit-line-clamp: 1;
                     -webkit-box-orient: vertical;
                     display: -webkit-box;
+                    word-wrap: anywhere; // Fixes ellipsis not showing up
                 }
 
                 .section-icon {
                     width: 20px;
                     height: 20px;
                     opacity: 0.9;
+                    flex-shrink: 0; // Never attempt to shrink the icon, even if the text is overflowing
 
                     svg {
                         width: 100%;
